# ER_DynamicOverlay

./: .gitignore  .gitmodules  Cargo.toml  README.fr.md  README.md  er_overlay.toml
.github/workflows/: ci.yml  release.yml
companion/er_checks_extractor/: Program.cs  er_checks_extractor.csproj
companion/er_checks_extractor/Defs/: ItemLotParam.xml
crates/er_game_state/: Cargo.toml
crates/er_game_state/src/: boss_table.rs  checks_table.rs  field_area.rs  game_language.rs  game_version.rs  inventory.rs  lib.rs  lot_flags.rs  reader.rs  screen_state.rs  tables.rs
crates/er_game_state/tables/: bosses.toml  goods.toml  tables.rar
crates/er_game_state/tables/en/: bosses.toml  bosses_checklist.toml  bosses_hardlock.toml  checks.toml
crates/er_game_state/tables/fr/: bosses.toml  bosses_checklist.toml  bosses_hardlock.toml  checks.toml
crates/er_overlay_common/: Cargo.toml
crates/er_overlay_common/src/: challenge.rs  config.rs  hotkey.rs  layout.rs  lib.rs  logging.rs  panel_layout.rs  types.rs
crates/er_overlay_dll/: Cargo.toml  build.rs
crates/er_overlay_dll/src/: lib.rs  overlay_app.rs  poll_worker.rs
crates/er_overlay_injector/: Cargo.toml  build.rs
crates/er_overlay_injector/src/: inject.rs  main.rs  process.rs  update.rs
crates/er_overlay_ui/: Cargo.toml
crates/er_overlay_ui/src/: boss_panel.rs  checks_panel.rs  fonts.rs  hud_window.rs  icon_atlas.rs  layout_engine.rs  lib.rs  metric_registry.rs  render.rs  tile_render.rs  tracked_icon.rs  view_model.rs
docs/release/: README.fr.md  README.md
er-overlay-local-test/layout_editor_assets/: README.md  app.js  gen_catalog.py  i18n.js
layouts/: dashboard.toml  french_challenge.toml
tools/: apply_boss_scaling_names.py  bundle_layout_editor.ps1  bundle_release.ps1  fix_bosses_toml_format.py  gen_boss_places.py  gen_boss_toml_from_hardlock.py  gen_region_order.py  gen_regions.py  inline_layout_editor.ps1  patch_boss_regions.py  patch_subregion_extras.py  release.ps1  sync_bosses_from_json.py  verify_bosses_coherence.py
tools/goods/: README.md  fetch_goods_icons.py  gen_catalog.py
tools/goods/GetGoodsIconIds/: GetGoodsIconIds.csproj  GoodsIconExporter.cs  Program.cs
tools/layout-editor/: README.md  app.js  gen_catalog.py  index.html  style.css
tools/layout_editor/: layout_editor.html
tools/layout_editor/layout_editor_assets/: README.md  app.js  catalog.js  color_picker.js  i18n.js  style.css
