[workspace]
resolver = "2"
members = [
    "crates/er_overlay_common",
    "crates/er_game_state",
    "crates/er_overlay_ui",
    "crates/er_overlay_dll",
    "crates/er_overlay_injector",
]
default-members = [
    "crates/er_overlay_injector",
    "crates/er_overlay_dll",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Elden Ring Overlay Contributors"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
imgui = "0.12"
hudhook = { version = "0.9.1", default-features = false, features = ["dx12"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
] }
pelite = "0.10"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
eldenring = "0.14"
fromsoftware-shared = "0.14"

er_overlay_common = { path = "crates/er_overlay_common" }
er_game_state = { path = "crates/er_game_state", default-features = false }
er_overlay_ui = { path = "crates/er_overlay_ui" }

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
