[package]
name = "er_game_state"
description = "Read-only Elden Ring game state access"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["game", "mock"]
game = [
    "dep:eldenring",
    "dep:fromsoftware-shared",
    "dep:pelite",
    "dep:windows",
]
mock = []

[dependencies]
er_overlay_common.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
eldenring = { workspace = true, optional = true }
fromsoftware-shared = { workspace = true, optional = true }
pelite = { workspace = true, optional = true }
windows = { workspace = true, optional = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
