[package]
name = "er_overlay_injector"
description = "Transparent LoadLibrary injector for er_overlay DLL"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[[bin]]
name = "er_overlay_injector"
path = "src/main.rs"

[dependencies]
er_overlay_common.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
serde = { workspace = true }
toml = { workspace = true }
ureq = "3.3.0"
serde_json = "1.0.150"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
self-replace = "1.5.0"
semver = "1.0.28"
